// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "letterSpacing": 1,
        "marginBottom": 2,
      }
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 8,
      }
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`renders a snapshot with content 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "letterSpacing": 1,
        "marginBottom": 2,
      }
    }
  >
    CAMILLA LONG
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 8,
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    When I was the official celebrity sex correspondent on Style magazine, every so often I would have to address the abject failure of male...  
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
      }
    }
  >
    Sunday June 11 2017
    , 
    The Sunday Times
  </Text>
</View>
`;
